# minesweeper

./: .gitignore  CMakeLists.txt  Makefile  README.md  icon.rc  settings.json
include/: array.h  configs.h  context.h  discord_rp.h  display_messagebox.h  game.h  globals.h  grid.h  macros.h  sprite.h  typedef.h  utils.h
src/: alloc.c  context_callbacks.c  discord_rich_presence.c  disp_msg.c  game_loop.c  globals.c  grid_mgr.c  main.c  sighandlers.c
